--- a/Assignment3/appsettings.json
+++ b/Assignment3/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:chogan2023a3.database.windows.net,1433;Initial Catalog=chogan2023A3;Persist Security Info=False;User ID=choganAdmin3;Password=q1VoHDWP@*Yo8r@H;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:chloe3.database.windows.net,1433;Initial Catalog=chloe;Persist Security Info=False;User ID=chloe3;Password=1234Abcd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
